<resources>
    <string name="app_name" translatable="false">Simple Music Player</string>
    <string name="channel_name" translatable="false">MusicChannel</string>
    <string name="channel_description" translatable="false">Used for notifications</string>
    <string name="action_shuffle" translatable="false">Shuffle</string>
    <string name="search_title">Search</string>
    <string name="last_played">Last played</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="current_playlists">Your current playlists</string>
    <string name="add_playlist">Add playlist</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_message">Enter playlist name</string>
    <string name="sort_songs">Sort by</string>
    <string name="playlist_count">Total songs: </string>
    <string name="title_activity_add_songs">AddSongsActivity</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_message">Do you really want to delete current playlist?</string>
    <string name="add_to">Add to</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_sleep_audio_summary">Set time after which player will stop playing </string>
    <string name="pref_sleep_audio_title">Sleep</string>
    <string name="pref_headphones_title">Headphones \u0026 Audio effects</string>
    <string name="pref_headphones_summary">Headphones \u0026 equalizer</string>
    <string name="pref_headphones_control_title">Control headphones buttons</string>
    <string name="pref_headphones_single_click">Single click</string>
    <string name="pref_headphones_double_click">Double click</string>
    <string name="pref_headphones_triple_click">Triple click</string>
</resources>
